# aws-ssm-automation-scripts

./: .gitignore  .npmignore  .pre-commit-config.yaml  .releaserc.json  .secrets.baseline  Attach policies to an IAM role automation  CHANGELOG.md  CLAUDE.md  COST_SAVINGS.md  Makefile  README.md  RELEASE_PROCESS.md  attach_policies_to_role.yaml  cloudfront_distribution_management.yaml  cost_optimization_recommendations.yaml  cost_savings_remediation.yaml  create_and_tag_resources.yaml  cross_account_resource_management.yaml  ec2_instance_patching.yaml  lambda_function_management.yaml  maintenance_window_setup.yaml  package-lock.json  package.json  pyproject.toml  s3_encryption.yaml  s3_encryption.yml  security_group_audit.yaml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  yamllint-config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: create-package.js  update_readme.py  version-bump.js
.github/workflows/: pre-commit.yml  publish-package.yml  release.yml  security-scan.yml  ssm-doc-pr-validate.yml  test-scripts.yml  update-readme.yml  validate.yml
examples/eventbridge/: cost_savings_eventbridge.yaml
examples/terraform/cost_savings_schedule/: main.tf  outputs.tf  variables.tf  versions.tf
scripts/: ssm_policy_check.py  ssm_schema.json  validate_ssm_schema.py
shared/: README.md
shared/python/: __init__.py  aws_helpers.py  config_manager.py  security_helpers.py
